fixed horizontal scroll

--- a/styles/sass/partials/_global.scss
+++ b/styles/sass/partials/_global.scss
@@ -1,6 +1,7 @@
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
+    transition: 0.4s;
 }
 
 h1, h2, h3, h4 {
