--- a/styles/sass/partials/_landing.scss
+++ b/styles/sass/partials/_landing.scss
@@ -6,7 +6,7 @@
     h2 {
         font-size: 6rem;
         color: $textColor;
-        width: 20%;
+        width: 300px;
         padding-left: 80px;
     }
 
@@ -14,7 +14,7 @@
         width: 650px;
         position: relative;
         top: 150px;
-        left: 20px;
+        left: 12px;
     }
 }
 
