--- a/styles/sass/partials/_newOptions.scss
+++ b/styles/sass/partials/_newOptions.scss
@@ -25,7 +25,7 @@
 
     .optionPhoto {
         position: relative;
-        left: 20px;
+        left: 12px;
         top: 20px;
         box-shadow: -20px -20px $borderColor;
     }
