--- a/styles/styles.css
+++ b/styles/styles.css
@@ -247,6 +247,8 @@ a {
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 h1, h2, h3, h4 {
@@ -367,7 +369,7 @@ header .navigation ul li {
 .landing h2 {
   font-size: 6rem;
   color: #4C0341;
-  width: 20%;
+  width: 300px;
   padding-left: 80px;
 }
 
@@ -375,7 +377,7 @@ header .navigation ul li {
   width: 650px;
   position: relative;
   top: 150px;
-  left: 20px;
+  left: 12px;
 }
 
 .headerPhoto {
@@ -458,7 +460,7 @@ header .navigation ul li {
 
 .newOption .optionPhoto {
   position: relative;
-  left: 20px;
+  left: 12px;
   top: 20px;
   -webkit-box-shadow: -20px -20px #FE6F19;
           box-shadow: -20px -20px #FE6F19;
@@ -876,4 +878,31 @@ footer h4 {
   color: #882C07;
   background: white;
   border: 2px solid #882C07;
+}
+
+@media (max-width: 965px) {
+  .landing {
+    height: 70vh;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .landing h2 {
+    padding-left: 0;
+  }
+  .landing .landingPhoto {
+    display: none;
+  }
+  .sea p {
+    width: 90%;
+  }
+}
+
+@media (max-width: 500px) {
+  html {
+    font-size: 55%;
+  }
+  .sea h2 {
+    text-align: center;
+  }
 }
